# E-Yantra

./: README.md
pkg_ros_iot_bridge/: CMakeLists.txt  package.xml
pkg_ros_iot_bridge/config/: config_pyiot.yaml
pkg_ros_iot_bridge/scripts/: node_action_server_ros_iot_bridge.py
pkg_task5/: CMakeLists.txt  package.xml
pkg_task5/action/: belt.action
pkg_task5/bag_files/: t5.bag
pkg_task5/config/: gripper_config.yaml
pkg_task5/config/rviz/: ur5_1_with_shelf.scene
pkg_task5/config/saved_trajectories/: 00_to_home.yaml  01_to_home.yaml  02_to_home.yaml  10_to_home.yaml  11_to_home.yaml  21_to_home.yaml  31_to_home.yaml  green_to_home.yaml  home_to_00.yaml  home_to_01.yaml  home_to_02.yaml  home_to_10.yaml  home_to_11.yaml  home_to_12.yaml  home_to_21.yaml  home_to_22.yaml  home_to_31.yaml  home_to_green.yaml  home_to_red.yaml  home_to_yellow.yaml  red_to_home.yaml  yellow_to_home.yaml
pkg_task5/launch/: task6_solution.launch
pkg_task5/msg/: barcodes.msg  boxes.msg
pkg_task5/scripts/: node_t6_client.py  node_t6_play.py  node_t6_server.py
